Adjust style of large_event_component in events#show

--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -1,10 +1,10 @@
 <%= content_tag :div, id: dom_id(@event), data: { controller: 'large-event' } do %>
-	<div class="overflow-hidden mt-5 bg-white md:mt-0"
+	<div class="overflow-hidden bg-white"
 			 data-event-favorited="<%= @user and @user.like?(@event) if @user and @user %>"
 			 data-event-identifier="<%= @event.id %>"
 			 data-event-description-open="false"
 			 data-event-modifier="single">
-		<div class="flex justify-between px-5 mb-2">
+		<div class="hidden md:flex items-center justify-between px-5 mb-2">
 			<div class="pr-3">
 				<span class="text-sm font-light text-gray-400">
 					<% if helpers.already_happened? @event %>
@@ -13,7 +13,7 @@
 						Atualizado há <%= time_ago_in_words @event&.updated_at %>
 					<% end %>
 				</span>
-				<h1 class="mb-2 leading-tight c-h2">
+				<h1 class="mb-2 leading-tight c-h2 pr-5">
 					<%= helpers.limit_name_size @event.name %>
 				</h1>
 			</div>
@@ -27,61 +27,67 @@
 															'event-id': @event.id,
 															component:  'large-event'
 														},
-														class: helpers.class_names('mr-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none transform transition-transform',
-																											 { 'bg-brand-100 px-2 py-1 -mt-1': @user&.like?(@event) }) do %>
+														class: helpers.class_names('cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none tap-highlight-none transform transition-transform',
+																											 { 'text-brand-600 hover:text-brand-500 bg-brand-100 px-2 py-1 -mt-1': @user&.like?(@event),
+																												 'text-gray-800 hover:text-brand-600':                               !@user&.like?(@event) }) do %>
 							<svg class="<%= helpers.class_names 'group h-6 w-6 stroke-current',
-																									{ 'text-gray-800':               !@user&.like?(@event),
-																										'text-brand-600 fill-current': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+																									{ 'fill-current': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"/>
 							</svg>
-							<span class="<%= helpers.class_names('ml-1', { 'text-gray-800':  !@user&.like?(@event),
-																														 'text-brand-600': @user&.like?(@event) }) %>">
+							<span class="ml-1">
 							<%= @user&.like?(@event) ? 'Salvo' : 'Salvar' %>
 						</span>
 						<% end %>
 					<% end %>
-					<%# unless @user&.like?(@event) %>
-					<%#= content_tag :div,
-														id:    dom_id(@event, :dislike),
-														data:  {
-															reflex:     'click->Event#dislike',
-															'event-id': @event.id,
-															component:  'large-event'
-														},
-														class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none transform transition-transform' do %>
-					<!--							<svg class="<%#= helpers.class_names 'h-6 w-6 stroke-current',
-																									{ 'text-gray-500 hover:text-gray-600': !@user&.dislike?(@event),
-																										'text-red-500':                      @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
-							</svg>-->
-					<%# end %>
-					<%# end %>
 				</div>
 			</div>
 		</div>
-		<div class="relative px-5">
+		<div class="md:mx-5">
 			<img src="<%= @event.image[:original].try { |image| image.url(public: true) } %>"
 					 alt="<%= @event.name %>"
-					 class="object-cover object-center w-full h-60 bg-gray-50 rounded-lg md:h-80">
-			<div class="hidden absolute top-0 right-0 mt-2 mr-2 opacity-0 transition-all duration-150 w-content"
-					 data-controller="share-button"
-					 data-share-button-text="<%= helpers.strip_tags(helpers.limit_description_size(@event.description, 160)) %>"
-					 data-share-button-title="<%= @event.name %>"
-					 data-share-button-url="<%= event_url(@event, format: :html) %>">
-				<div class="flex overflow-hidden relative py-2 px-3 mx-auto text-sm bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-brand-500 w-content"
-						 data-action="click->share-button#share"
-						 data-controller="ripple">
-					<span>Compartilhar</span>
-					<svg class="ml-1 w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-						<path d="M0 0h24v24H0z" fill="none"/>
-						<path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"/>
-					</svg>
+					 class="object-cover object-center w-full h-60 bg-gray-50 md:h-80 md:rounded-lg">
+		</div>
+		<div class="md:hidden relative md:px-5">
+			<div class="border-b border-gray-100 flex items-center justify-between mt-5 pb-5 px-5">
+				<div class="pr-3">
+					<span class="text-sm font-light text-gray-600">
+						<% if helpers.already_happened? @event %>
+							O evento ocorreu <%= I18n.l(@event.end_time) %>
+						<% else %>
+							Atualizado há <%= time_ago_in_words @event&.updated_at %>
+						<% end %>
+					</span>
+				</div>
+				<div class="flex md:hidden">
+					<div class="flex items-center mt-1 space-x-2">
+						<% unless @user&.dislike?(@event) %>
+							<%= content_tag :div,
+															id:    dom_id(@event, :like),
+															data:  {
+																reflex:     'click->Event#like',
+																'event-id': @event.id,
+																component:  'large-event'
+															},
+															class: helpers.class_names('mr-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none transform transition-transform',
+																												 { 'bg-brand-100 px-2 py-1 -mt-1': @user&.like?(@event) }) do %>
+								<svg class="<%= helpers.class_names 'group h-6 w-6 stroke-current',
+																										{ 'text-gray-800':               !@user&.like?(@event),
+																											'text-brand-600 fill-current': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"/>
+								</svg>
+								<span class="<%= helpers.class_names('ml-1', { 'text-gray-800':  !@user&.like?(@event),
+																															 'text-brand-600': @user&.like?(@event) }) %>">
+							<%= @user&.like?(@event) ? 'Salvo' : 'Salvar' %>
+						</span>
+							<% end %>
+						<% end %>
+					</div>
 				</div>
 			</div>
 		</div>
 		<% unless helpers.already_happened? @event %>
-			<div class="flex p-5 border-b border-gray-100">
-				<div class="flex flex-col justify-center py-2 px-3 my-auto mr-3 text-center rounded-lg text-brand-600 bg-brand-100 h-content w-content">
+			<div class="flex p-5 border-b border-gray-100 md:border-0">
+				<div class="flex flex-col justify-center py-2 px-3 my-auto mr-5 text-center rounded-lg text-gray-800 border h-content w-content">
 					<div class="text-sm font-bold leading-tight uppercase">
 						<% if @event.day_of_week['date'] < Date.today + 7 %>
 							<%= I18n.l(@event.day_of_week['date'], format: :week) %>
@@ -98,7 +104,7 @@
 				</div>
 			</div>
 		<% end %>
-		<div class="flex flex-col py-5 px-5 border-b border-gray-100 md:flex-row">
+		<div class="flex flex-col py-5 px-5 border-b border-gray-100 md:border-0 md:flex-row">
 			<div class="flex-grow">
 				<%= link_to place_path(@event&.place), class: 'inline items-center space-x-2', data: { 'turbo-preserve-scroll': true } do %>
 					<h2 class="inline c-h3">
@@ -115,8 +121,8 @@
 					<%= helpers.limit_address_name_size @event.geographic['address'] %>
 				</div>
 			</div>
-			<div class="flex h-12 align-middle bg-cover group" style="">
-				<%= link_to helpers.google_maps_url(@event.geographic['address']), class: 'border flex group-hover:bg-brand-100 group-hover:text-brand-600 h-content items-center justify-center md:justify-end md:mt-0 mt-3 my-auto px-2 py-2 rounded text-gray-700 text-xs' do %>
+			<div class="flex items-center h-12 align-middle bg-cover group" style="">
+				<%= link_to helpers.google_maps_url(@event.geographic['address']), class: 'flex group-hover:text-brand-600 h-content items-center justify-center md:justify-end md:mt-0 mt-3 text-brand-600 text-xs' do %>
 					<svg class="mr-1 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M0 0h24v24H0z" fill="none"/>
 						<path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
