--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -121,7 +121,7 @@
 	<div class="md:col-span-5">
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
-	<div class="mt-5 space-y-8 md:col-span-3 md:mb-0 md:mt-0">
+	<div class="mt-5 md:col-span-3 md:mb-0 md:mt-28">
 		<% if will_happen? @event %>
 			<div class="flex hidden relative bottom-auto items-center p-3 space-y-2 w-auto text-sm text-gray-600 rounded-xl cursor-pointer md:block">
 				<a href="<%= @event.source_url %>" target="_blank" rel="nofollow" class="inline-block flex justify-start items-center py-2 px-4 mr-3 mb-3 text-gray-600 bg-gray-100 rounded-full transition-all transition-colors transform cursor-pointer select-none group duration-50 group-hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 tap-highlight-none w-content">
@@ -154,7 +154,7 @@
 			</div>
 		<% end %>
 
-		<div class="p-5 py-4 space-y-3">
+		<div class="border-t border-gray-100 md:border-0 inline-block p-5 py-8 space-y-3">
 			<h2 class="c-h3">Organizadores</h2>
 			<% @event.organizers.each do |organizer| %>
 				<%= link_to organizer_path(organizer), class: 'flex items-center space-x-3' do %>
@@ -175,14 +175,14 @@
 			<% end %>
 		</div>
 
-		<div class="py-4 space-y-3">
+		<div class="border-t border-b border-gray-100 md:border-0 py-8 space-y-3">
 			<h2 class="px-5 c-h3">Similares</h2>
 			<div class="md:space-y-2">
 				<% if @similar_events.present? %>
 					<% @similar_events.each do |similar_event| %>
 						<div class="flex justify-start py-3 px-5 md:border-0">
 							<div>
-								<div data-controller="ripple" class="overflow-hidden relative w-16 h-16 rounded ripple ripple-white">
+								<div class="overflow-hidden relative w-16 h-16 rounded">
 									<%= link_to event_path(similar_event),
 															data: {
 																action:     'click->main-sidebar--horizontal-event#openEvent',
@@ -218,22 +218,22 @@
 			</div>
 		</div>
 
-		<%= link_to category_events_path(@event&.categories_url), class: 'bg-white cursor-pointer inline-block md:hover:bg-brand-100 md:hover:text-brand-600 overflow-hidden rounded-lg space-y-3' do %>
-			<div class="flex justify-between items-center p-5 pb-0">
+		<%= link_to category_events_path(@event&.categories_url), class: 'flex p-5 text-gray-800 mt-5 bg-white cursor-pointer inline-block md:hover:bg-brand-100 md:hover:text-brand-600 overflow-hidden rounded-lg space-y-3' do %>
+			<div class="pr-10">
 				<h2 class="text-xl font-bold rounded-lg font-display">
 					<%= @event&.categories_display_name %>
 				</h2>
-				<svg xmlns="http://www.w3.org/2000/svg" class="w-6 stroke-current" fill="none" viewBox="0 0 24 24">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
-				</svg>
+				<div class="">
+					Ver todos os eventos da categoria <%= @event&.categories_display_name&.underscore %> em Porto Alegre
+				</div>
 			</div>
-			<div class="px-5 pb-5">
-				Ver todos os eventos da categoria <%= @event&.categories_display_name&.underscore %> em Porto Alegre
-			</div>
+			<svg xmlns="http://www.w3.org/2000/svg" class="w-6 stroke-current flex-shrink-0" fill="none" viewBox="0 0 24 24">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
+			</svg>
 		<% end %>
 	</div>
 
-	<div class="flex fixed bottom-0 py-2 px-3 space-x-2 w-screen text-sm font-medium text-gray-500 bg-white border-t cursor-pointer select-none md:hidden tap-highlight-none">
+	<div class="flex fixed bottom-0 py-3 px-3 space-x-2 w-screen text-sm font-medium text-gray-500 bg-white border-t cursor-pointer select-none md:hidden tap-highlight-none">
 		<a href="<%= @event.source_url %>" target="_blank" rel="nofollow" class="flex-1 justify-center space-x-2 select-none c-chip">
 			<div>Site oficial</div>
 			<svg class="h-5 stroke-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
