--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: dom_id(@event, :hero), class: helpers.class_names('relative mr-1 mt-6 transition-opacity duration-300'), data: { controller: 'hero--horizontal-event', 'hero--horizontal-event-open-in-sidebar': @open_in_sidebar, 'flip-key': dom_id(@event, :hero) } do %>
-	<div data-hero--horizontal-event-target="shadowItem" class="overflow-hidden absolute top-0 right-0 top-2 -right-2 w-32 h-20 rounded-md opacity-0 transition-all transform bg-gray-200 md:h-28 md:w-48">
+	<div data-hero--horizontal-event-target="shadowItem" class="overflow-hidden absolute top-0 right-0 top-3 -right-3 w-32 h-20 rounded-lg opacity-0 transition-all transform bg-gray-200 md:h-28 md:w-48">
 
 	</div>
 	<div data-hero--horizontal-event-target="currentItem"
@@ -12,10 +12,10 @@
 												action:     'click->hero--horizontal-event#openEvent',
 												'event-id': @event.id
 											},
-											class: 'c-h3 inline-block leading-snug' do %>
+											class: 'c-h3 inline leading-snug' do %>
 				<%= @event.name %>
 			<% end %>
-			<div class="mt-1.5 text-xs md:text-sm text-gray-700">
+			<div class="pl-2 inline text-xs md:text-sm text-gray-700">
 				<%= helpers.day_of_week(@event.start_time) %> · <%= helpers.format_hour @event.start_time %>h ·
 				<%= @event&.categories_display_name&.capitalize %> ·
 				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
@@ -23,26 +23,26 @@
 			<div class="font-light hidden md:inline-block mt-2 text-gray-700 text-sm">
 				<%= helpers.limit_description_size @event.description, 120 %>
 			</div>
-			<div class="flex mt-3 space-x-4">
-				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-gray-600 text-sm' do %>
+			<div class="flex mt-5 space-x-2">
+				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'c-chip' do %>
 					<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
-																							{ 'text-gray-500 group-hover:text-brand-600': !@user&.like?(@event),
-																								'text-brand-600':                           @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+																							{ '': !@user&.like?(@event),
+																								'': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
 					</svg>
-					<span class="<%= helpers.class_names('ml-1', { 'text-gray-500 group-hover:text-brand-600': !@user&.like?(@event),
-																												 'text-brand-600':                           @user&.like?(@event) }) %>">
+					<span class="<%= helpers.class_names('ml-1', { '': !@user&.like?(@event),
+																												 '': @user&.like?(@event) }) %>">
 						Curti
 					</span>
 				<% end %>
-				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex group font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm' do %>
+				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'c-chip' do %>
 					<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
-																							{ 'text-gray-500 group-hover:text-brand-600': !@user&.dislike?(@event),
-																								'text-brand-600':                           @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+																							{ '': !@user&.dislike?(@event),
+																								'': @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
 					</svg>
-					<span class="<%= helpers.class_names('ml-1', { 'text-gray-500 group-hover:text-brand-600': !@user&.like?(@event),
-																												 'text-brand-600':                           @user&.like?(@event) }) %>">
+					<span class="<%= helpers.class_names('ml-1', { '': !@user&.like?(@event),
+																												 '': @user&.like?(@event) }) %>">
 						Não Curti
 					</span>
 				<% end %>
@@ -50,7 +50,7 @@
 		</div>
 		<div>
 			<div style="background-color: <%= @event.image_dominant_color %>"
-					 class="<%= helpers.class_names('h-20 md:h-28 md:w-48 overflow-hidden rounded-md border relative w-32',
+					 class="<%= helpers.class_names('h-20 md:h-28 md:w-48 overflow-hidden rounded-lg border relative w-32',
 																					{}) %>">
 				<%= link_to event_path(@event),
 										id:   dom_id(@event, 'hero--horizontal-event__image'),
