--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -14,8 +14,8 @@
 
 %>
 
-<header class="<%= class_names('justify-between h-14 px-5 md:h-16 max-w-screen-lg md:grid md:grid-cols-8 mx-auto my-auto select-none tap-highlight-none',
-															 { 'flex h-14':           !current_page?('/busca'),
+<header class="<%= class_names('gap-16 justify-between h-14 px-5 md:h-16 max-w-screen-lg md:grid md:grid-cols-8 mx-auto my-auto select-none tap-highlight-none',
+															 { 'flex h-14':      !current_page?('/busca'),
 																 'h-content py-2': current_page?('/busca') }) %>"
 				id="top-bar">
 	<div class="<%= class_names 'flex md:relative md:col-span-2 h-full w-full',
@@ -68,13 +68,13 @@
 		<% if !current_user && controller_name == 'feeds' %>
 			<%= link_to new_user_registration_path, class: 'md:hidden my-auto w-8' do %>
 				<svg class="float-right w-6 text-gray-800 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
 				</svg>
 			<% end %>
 		<% end %>
 	</div>
 	<% if props[:visible][:search] %>
-		<div class="<%= class_names('col-span-12 md:col-span-3 md:px-3',
+		<div class="<%= class_names('col-span-12 md:col-span-3',
 																{ 'hidden md:block': controller_name != 'search' }) %>">
 			<form
 				class="flex items-center h-full rounded"
@@ -86,10 +86,6 @@
 				method="get"
 				name="search"
 				style="width: 100%">
-				<!--				<svg class="w-6 h-auto fill-current material-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
-				<!--					<path fill="none" d="M0 0h24v24H0V0z"/>-->
-				<!--					<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>-->
-				<!--				</svg>-->
 				<input autocomplete="false"
 							 name="q"
 							 class="border focus:bg-white focus:border-transparent focus:outline-none focus:placeholder-brand-600 focus:ring focus:ring-brand-500 font-light h-10 mx-auto placeholder-gray-400 px-4 py-1 rounded-full text-xs w-full"
@@ -109,19 +105,15 @@
 	<div class="md:col-span-3 flex-shrink-0">
 		<div class="flex justify-end items-center h-full">
 			<% unless current_page?('/users/sign_up') || current_page?('/users/sign_in') %>
-				<% if current_user %>
-					<% if controller_name == 'feeds' %>
+				<% if current_user && controller_name == 'feeds' %>
+					<%= link_to user_path(current_user), class: 'flex items-center' do %>
 						<% if current_user&.picture %>
-							<%= link_to user_path(current_user) do %>
-								<%= image_tag(current_user.picture, { class: "w-7 h-7 md:w-8 md:h-8 border rounded-full", alt: current_user&.name, onerror: "this.style.opacity='0'" }) rescue nil %>
-							<% end %>
+							<%= image_tag(current_user.picture, { class: "w-7 h-7 border rounded-full", alt: current_user&.name, onerror: "this.style.opacity='0'" }) rescue nil %>
 						<% else %>
-							<%= link_to user_path(current_user) do %>
-								<div class="mr-2 w-8 h-8 bg-gray-100 rounded-full"></div>
-							<% end %>
+							<div class="mr-2 w-7 h-7 bg-gray-100 rounded-full"></div>
 						<% end %>
+						<div class="pl-2"><%= truncate(current_user&.name, length: 15) %></div>
 					<% end %>
-					<%#= link_to('Sair', destroy_user_session_path, method: :delete, class: 'hidden md:inline-block text-gray-500 font-sm') %>
 				<% else %>
 					<%= link_to 'Entrar', new_user_session_path, class: 'hidden md:inline-block hover:text-brand-600 px-6 text-gray-800 text-sm' %>
 					<%= link_to 'Criar conta',
