--- a/web/app/views/cinemas/index.html.erb
+++ b/web/app/views/cinemas/index.html.erb
@@ -1,21 +1,24 @@
 <% content_for :meta_title, "Cinemas em Porto Alegre - RS" %>
+<% content_for :back_button, true %>
+<% content_for :top_app_bar_title, truncate('Cinemas em Porto Alegre', length: 30) %>
+
 <%= notice %>
 
 <%= render(ModalComponent.new) %>
 
 <%# cache [current_user, 'cinemas', @cinemas&.map(&:id), @cinemas&.max&.updated_at&.to_i] do %>
 <section class="mx-auto mt-6 md:mt-12 max-w-screen-lg min-h-screen px-5 mb-16">
-	<h1 class="c-h2 mb-6">Cinemas de Porto Alegre</h1>
+	<h1 class="hidden md:inline-block c-h2 mb-6">Cinemas em Porto Alegre</h1>
 
 	<div class="gap-5 grid grid-cols-1 justify-self-stretch md:grid-cols-2">
 		<% @cinemas.sort_by { |c| c.display_name }.each do |cinema| %>
-			<div class="border p-5 rounded-lg">
+			<div class="border p-3 md:p-5 rounded-lg">
 				<div class="grid grid-cols-4">
 					<div class="col-span-3 pr-5 mb-3 text-sm">
-						<h2 id="<%= cinema&.slug %>" class="text-xl font-bold text-gray-800 inline">
+						<h2 id="<%= cinema&.slug %>" class="c-h3 mb-2">
 							<%= link_to cinema.display_name, cinema_path(cinema), class: 'hover:text-brand-600' %>
 						</h2>
-						<div class="text-xs text-gray-700">
+						<div class="text-xxs md:text-xs leading-snug text-gray-700">
 							<%= cinema.address %>
 							<% if cinema.neighborhood&.present? %>
 								‧
@@ -51,8 +54,8 @@
 					</div>
 				</div>
 				<div class="flex space-x-3">
-					<% cinema.movies.limit(6).each_with_index do |movie, index| %>
-						<% if index < 5 %>
+					<% cinema.movies.limit(mobile_device? ? 4 : 6).each_with_index do |movie, index| %>
+						<% if index < (mobile_device? ? 3 : 5) %>
 							<div class="flex flex-col w-16 transition-transform transform group md:hover:scale-105">
 								<%= link_to cine_film_path(movie), class: 'flex flex-col', data: { 'turbo-preserve-scroll': true } do %>
 									<%= image_tag shrine_image_url(movie, :small), {
@@ -60,7 +63,7 @@
 										title:   movie.title,
 										alt:     "Filme #{movie.title}",
 										class:   'border shadow-sm group-hover:shadow bg-gray-100 object-center object-cover rounded',
-										style:   'min-height: 96px',
+										style:   'min-height: 66px',
 										onerror: "this.style.opacity='0'"
 									} rescue nil %>
 									<%= tag.div limit_name_size(movie.title, 24), class: 'leading-tight mt-2 inline-block text-xxs text-center font-medium text-gray-900' %>
