--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= "main-sidebar--group-by-day-list-#{@pagy&.vars&.dig(:page)}" %>" data-controller="infinite-scroll" class="pr-5 pl-3">
 	<div>
-		<% @events.group_by { |e| e.start_time.strftime("%Y-%m-%d") }.each do |group| %>
+		<% @events.group_by { |e| e.start_time.to_date }&.each do |group| %>
 			<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="relative pb-6 mb-3 ml-2 border-b last:border-b-0">
 				<div class="sticky top-0 z-10 flex-1 pt-3 pb-3 pl-1 mb-3 -ml-1 leading-6 text-gray-600 bg-white md:top-16 md:bg-white md:leading-normal md:pb-2">
 					<div class="md:pt-4">
