Add placeholder avatar to organizers in feed

--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -6,16 +6,20 @@
 
 
 	<div class="font-semibold text-brand-600">
-		<a href="#">oi@alegreme.com</a>
+		oi@alegreme.com
 	</div>
 	<div class="flex-wrap inline-flex items-center justify-center">
-		Feito
-		<!-- <a href="https://www.instagram.com/jonataseduardo/">@jonataseduardo</a> -->
-		com
-		<svg class="mx-2 w-5" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-			<path d="M11.7054 0.257324C10.0657 0.257324 8.63837 1.23748 7.99993 2.65639C7.36149 1.23889 5.93415 0.257324 4.29446 0.257324C2.05571 0.257324 0.234619 2.07982 0.234619 4.31857C0.234619 9.36701 7.51759 13.5239 7.82837 13.6983C7.88181 13.7278 7.93946 13.7433 7.99853 13.7433C8.05759 13.7433 8.11665 13.7278 8.16868 13.6983C8.47806 13.5239 15.7638 9.36701 15.7638 4.31857C15.7652 2.07982 13.9442 0.257324 11.7054 0.257324Z" fill="#DB4437"/>
-		</svg>
-		️no Centro Histórico de Porto Alegre
+		<div>
+			Feito
+			<!-- <a href="https://www.instagram.com/jonataseduardo/">@jonataseduardo</a> -->
+			com
+			❤️
+			️no Centro Histórico de Porto Alegre
+		</div>
+		<span class="px-2">·</span>
+		<div class="text-brand-600">
+			<a href="https://en.wikipedia.org/wiki/Perpetual_beta" title="release early and release often (even with bugs \o/)" rel="nofollow" target="_blank">Always in beta 🤙</a>
+		</div>
 	</div>
 	<!-- <div class="me-footer__vamodale">
 		Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima.
@@ -24,9 +28,9 @@
 		<a class="md:hover:text-brand-500 transition-colors duration-150" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow" target="_blank">
 			Sobre ·
 		</a>
-		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/privacy">Política de
+		<a rel="nofollow" class="md:hover:text-brand-600 transition-colors duration-150" href="/privacy">Política de
 			privacidade</a> ·
-		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/terms">Termos de serviço</a> ·
-		<a href="/content" class="md:hover:text-brand-500 transition-colors duration-150" rel="nofollow">Política de propriedade intelectual</a>
+		<a rel="nofollow" class="md:hover:text-brand-600 transition-colors duration-150" href="/terms">Termos de serviço</a> ·
+		<a href="/content" class="md:hover:text-brand-600 transition-colors duration-150" rel="nofollow">Política de propriedade intelectual</a>
 	</div>
 </section>
