--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -42,7 +42,7 @@
 								onerror: "this.style.opacity='0'"
 							} rescue nil %>
 							<% unless organizer.image %>
-								<div class="border border-brand-100 bg-brand-100 h-6 object-center object-cover rounded-full w-6"></div>
+								<img src="<%= "https://ui-avatars.com/api/?size=24&background=random&name=#{organizer.details_name}" %>" alt="<%= "Organizador #{organizer.details_name}" %>" class="border border-brand-100 bg-brand-100 h-6 object-center object-cover rounded-full w-6">
 							<% end %>
 						<% end %>
 					<% end %>
