--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -87,7 +87,7 @@
 		</div>
 		<% unless helpers.already_happened? @event %>
 			<div class="flex p-5 border-b border-gray-100 md:border-0">
-				<div class="flex flex-col justify-center py-2 px-3 my-auto mr-5 text-center rounded-lg text-gray-800 border h-content w-content">
+				<div class="flex flex-col justify-center py-2 px-3 my-auto mr-5 text-center rounded-lg text-gray-800 border h-14 w-content">
 					<div class="text-sm font-bold leading-tight uppercase">
 						<% if @event.day_of_week['date'] < Date.today + 7 %>
 							<%= I18n.l(@event.day_of_week['date'], format: :week) %>
@@ -95,12 +95,20 @@
 							<%= I18n.l(@event.day_of_week['date'], format: :long) %>
 						<% end %>
 					</div>
-					<div class="text-sm"><%= helpers.format_hour @event.start_time %></div>
+					<div class="text-sm"><%= helpers.format_hour @event.start_time unless @event.multiple_hours? %></div>
 				</div>
 
 				<div class="my-auto text-sm leading-snug text-gray-700 md:text-base">
-					O evento acontecerá <%= I18n.l(@event.start_time) %>.
-					Daqui <%= helpers.distance_of_time_in_words @event&.start_time, DateTime.now %>.
+					<% if @event.multiple_hours? %>
+						O evento acontecerá <%= I18n.l(@event.day_of_week['date'], format: :default) %>,
+						em múltiplos horários,
+						em <%= helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, only: ['days'] %>.
+						<%= link_to 'Confirmar horários', @event.source_url, class: 'text-brand-600', rel: 'nofollow', target: '_blank' rescue nil %>
+					<% else %>
+						O evento acontecerá <%= I18n.l(@event.day_of_week['date'], format: :default) %>,
+						às <%= helpers.format_hour(@event.start_time) %> horas,
+						daqui <%= helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, only: ['days', 'hours'] %>
+					<% end %>
 				</div>
 			</div>
 		<% end %>
