--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -49,7 +49,13 @@
 				</span>
 				<span class="hidden text-gray-700 md:inline">·</span>
 				<span class="inline text-gray-700 md:inline-block">
+					<% if @event.multiple_hours? %>
+						<span title="Acontece em vários horários, verifique no site oficial">
+							+1 horários
+						</span>
+					<% else %>
 							<%= helpers.format_hour @event.start_time %>h
+					<% end %>
 				</span>
 				<span class="text-gray-700 md:hidden">·</span>
 				<div class="hidden md:inline">
@@ -80,13 +86,15 @@
 						·
 				</span>
 				<% if @event.prices&.present? %>
-					<span class="md:hidden" title="Preço médio informado na descrição do evento"><%= number_to_currency helpers.prices_average(@event.prices), locale: 'pt-BR' %> · </span>
+					<span class="md:hidden" title="Preço médio informado na descrição do evento"><%= number_to_currency helpers.prices_average(@event.prices), locale: 'pt-BR' %>
+						· </span>
 				<% end %>
 				<span class="text-gray-700 md:hidden">
 					<%= link_to helpers.limit_place_name_size(@event.place_details_name, 26), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
 				</span>
 				<% if @event.prices&.present? %>
-					<span class="hidden md:inline-block" title="Preço médio informado na descrição do evento"><%= number_to_currency helpers.prices_average(@event.prices), locale: 'pt-BR' %> · </span>
+					<span class="hidden md:inline-block" title="Preço médio informado na descrição do evento"><%= number_to_currency helpers.prices_average(@event.prices), locale: 'pt-BR' %>
+						· </span>
 				<% end %>
 				<span class="hidden font-light text-gray-700 md:inline">
 					<%= helpers.limit_description_size @event.description, 80 %>
