--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -51,7 +51,7 @@
 				<span class="inline text-gray-700 md:inline-block">
 					<% if @event.multiple_hours? %>
 						<span title="Acontece em vários horários, verifique no site oficial">
-							+1 horários
+							+1 horário
 						</span>
 					<% else %>
 							<%= helpers.format_hour @event.start_time %>h
