--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -1,67 +1,69 @@
 <%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar' }, class: 'transition-opacity', style: 'will-change: min-height;' do %>
 	<div id="calendar--inner" data-calendar-target="calendar" class="calendar select-none tap-highlight-none mt-12" style="will-change: position, transform;">
 		<span class="c-h2 pb-2 pt-10">Minha agenda</span>
-		<div class="capitalize pt-2 flex font-medium items-center justify-between pb-5 rounded-t-lg text-gray-500">
-			<div class="flex items-center justify-items-start">
+		<div class="">
+			<div class="capitalize flex font-medium items-center justify-between mt-5 pb-3 rounded-t-lg text-gray-500">
+				<div class="flex items-center justify-items-start">
 				<span class="font-semibold text-brand-600 mr-2">
 					<%= t('date.month_names')[start_date.month] %> <%= start_date.year %>
 				</span>
-				<svg data-left-sidebar--calendar-target="loadingIcon" class="opacity-0 text-brand-600 w-7 h-7 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-					<path fill="none" d="M0 0h24v24H0V0z"/>
-					<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
-					<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
-				</svg>
-			</div>
-			<div class="mr-2 flex">
-				<%= content_tag :button, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
-					<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-						<path d="M0 0h24v24H0z" fill="none"/>
-						<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+					<svg data-left-sidebar--calendar-target="loadingIcon" class="opacity-0 text-brand-600 w-7 h-7 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path fill="none" d="M0 0h24v24H0V0z"/>
+						<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+						<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
 					</svg>
-				<% end if start_date&.month > DateTime.now.month %>
-				<%= content_tag :button, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
-					<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-						<path d="M0 0h24v24H0z" fill="none"/>
-						<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
-					</svg>
-				<% end %>
+				</div>
+				<div class="mr-2 flex">
+					<%= content_tag :button, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
+						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<path d="M0 0h24v24H0z" fill="none"/>
+							<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+						</svg>
+					<% end if start_date&.month > DateTime.now.month %>
+					<%= content_tag :button, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'cursor-pointer flex focus:outline-none h-8 items-center justify-center md:hover:bg-brand-600 md:hover:text-white mx-1 rounded-full w-8' do %>
+						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<path d="M0 0h24v24H0z" fill="none"/>
+							<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+						</svg>
+					<% end %>
+				</div>
 			</div>
-		</div>
-		<table data-left-sidebar--calendar-target="table" class="table-auto w-full md:-ml-2">
-			<thead>
-			<tr>
-				<% date_range.slice(0, 7).each do |day| %>
-					<th class="pb-2 text-gray-700 font-semibold uppercase text-xs"><%= t('date.abbr_day_names')[day.wday] %></th>
-				<% end %>
-			</tr>
-			</thead>
-
-			<tbody>
-			<% date_range.each_slice(7) do |week| %>
+			<table data-left-sidebar--calendar-target="table" class="table-auto w-full md:-ml-2">
+				<thead>
 				<tr>
-					<% week.each do |day| %>
-						<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->left-sidebar--calendar#inDay', day: day.strftime }, class: td_classes_for(day) do %>
-							<%= content_tag :div, class: helpers.class_names('relative z-10 mx-auto text-xs day-of-month',
-																															 { 'mt-1':                                               @indicators&.include?(day),
-																																 'selected flex items-center justify-center flex-col': Date.current == day && !@filter || (day.to_date == start_date.to_date && @filter) }) do %>
-								<div class="z-20">
-									<%= day.strftime '%e' %>
-								</div>
-							<% end %>
-							<% if @indicators&.include?(day) %>
-								<div class="flex justify-center space-x-0.5">
-									<% @indicators.find_all { |indic| indic == day }[...3].each do %>
-										<div data-indicator class="<%= helpers.class_names 'h-1 rounded-full transform translate-y-2 w-1 bg-brand-500' %>">
-										</div>
-									<% end %>
-								</div>
-							<% end %>
-						<% end %>
+					<% date_range.slice(0, 7).each do |day| %>
+						<th class="pb-2 text-gray-700 font-semibold uppercase text-xs"><%= t('date.abbr_day_names')[day.wday] %></th>
 					<% end %>
 				</tr>
-			<% end %>
-			</tbody>
-		</table>
+				</thead>
+
+				<tbody>
+				<% date_range.each_slice(7) do |week| %>
+					<tr>
+						<% week.each do |day| %>
+							<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->left-sidebar--calendar#inDay', day: day.strftime }, class: td_classes_for(day) do %>
+								<%= content_tag :div, class: helpers.class_names('relative z-10 mx-auto text-xs day-of-month',
+																																 { 'mt-1':                                               @indicators&.include?(day),
+																																	 'selected flex items-center justify-center flex-col': Date.current == day && !@filter || (day.to_date == start_date.to_date && @filter) }) do %>
+									<div class="z-20">
+										<%= day.strftime '%e' %>
+									</div>
+								<% end %>
+								<% if @indicators&.include?(day) %>
+									<div class="flex justify-center space-x-0.5">
+										<% @indicators.find_all { |indic| indic == day }[...3].each do %>
+											<div data-indicator class="<%= helpers.class_names 'h-1 rounded-full transform translate-y-2 w-1 bg-brand-500' %>">
+											</div>
+										<% end %>
+									</div>
+								<% end %>
+							<% end %>
+						<% end %>
+					</tr>
+				<% end %>
+				</tbody>
+			</table>
+		</div>
 		<div id="calendar__list" class="" data-left-sidebar--calendar-target="list" style="<%= helpers.class_names 'hidden': @events&.empty? %>">
 			<div class="flex justify-between items-baseline bg-white sticky top-0 z-20">
 				<%= content_tag :div,
@@ -81,7 +83,7 @@
 				<% end %>
 			</div>
 			<% if @events.present? %>
-				<div id="calendar__events" data-left-sidebar--calendar-target="events" class="pb-10 mt-6">
+				<div id="calendar__events" class="pb-10 mt-6 space-y-10">
 					<%= render LeftSidebar::GroupByDayListComponent.new(likeables: @events, user: @user) %>
 				</div>
 			<% end %>
