Adjust in cache key for movies component

--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -12,7 +12,7 @@
 	</div>
 <% end %>
 
-<% cache ['movies', @movies&.map(&:id), @movies&.max&.updated_at&.to_i] do %>
+<% cache "movies/show/movies-component" do %>
 	<div class="md:mt-6">
 		<%= render MoviesComponent.new(movies: @movies, user: current_user, title: false, id: 'movies-show') %>
 	</div>
