--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -1,9 +1,7 @@
 <%= content_tag :div, id: 'swipable', data: { controller: 'hero--swipable' }, class: 'flex select-none tap-highlight-none' do %>
 	<% if @show_swipable %>
 		<div class="flex w-full">
-			<div class="<%= helpers.class_names('md:mx-auto mx-5 md:px-5 w-full',
-																					{ '': current_stage != :end_train_message,
-																						'': current_stage == :end_train_message }) %>">
+			<div class="md:mx-auto mx-5 md:px-5 w-full">
 				<% if current_stage == :train %>
 					<div data-swipable-target="items">
 						<div class="mb-5">
@@ -42,7 +40,7 @@
 							<div class="font-bold"><%= "Obrigado #{@user.first_name}!" %></div>
 							<div class="font-light">Agora já consigo recomendar eventos parecidos com seu gosto pessoal.</div>
 						</div>
-						<%= content_tag :div, data: { reflex: 'click->Train#hide_train' }, class: 'px-4 py-3 md:py-2 font-semibold text-white bg-brand-500 rounded-full cursor-pointer hover:bg-brand-600' do %>
+						<%= content_tag :div, data: { reflex: 'click->Train#hide_train' }, class: 'px-4 py-3 md:py-2 font-semibold text-white bg-brand-600 rounded-full cursor-pointer hover:bg-brand-600' do %>
 							Ver recomendações
 						<% end %>
 					</div>
@@ -78,7 +76,7 @@
 						<div id="end-message-title" class="font-semibold max-w-md px-5 text-gray-900">
 							<%= "Você já viu todas as recomendações que eu tinha para você hoje 😃" %>
 						</div>
-						<%= content_tag :div, data: { reflex: 'click->Swipable#hide_swipable' }, class: 'px-4 py-2 font-semibold text-white bg-brand-500 rounded-full cursor-pointer' do %>
+						<%= content_tag :div, data: { reflex: 'click->Swipable#hide_swipable' }, class: 'px-4 py-2 font-semibold text-white bg-brand-600 rounded-full cursor-pointer' do %>
 							Ok, fechar
 						<% end %>
 					</div>
