--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -40,8 +40,8 @@
     "position": 3,
     "item":
      {
-       "@id": "<%= day_events_url(@event.day_of_week['date'].strftime('%d-%m-%Y')) %>",
-       "name": "<%= "Eventos em Porto Alegre dia #{I18n.l(@event.day_of_week['date'], format: :long)}" %>"
+       "@id": "<%= day_events_url(@event.start_time.strftime('%d-%m-%Y')) %>",
+       "name": "<%= "Eventos em Porto Alegre dia #{I18n.l(@event.start_time, format: :long)}" %>"
      }
   },
   {
